--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
@@ -1,6 +1,5 @@
-<div class="legende">legende</div>
-<table class="table tableau">
-    <thead>
+<table class="table tableau dtables">
+<thead>
         <tr>
             <th>Titre du classeur</th>
             <th>Intervention</th>
@@ -39,5 +38,3 @@
         suivreUrl("" + $(this).data("id"), e);
     });
 </script>
-
-
