--- a/src/Sesile/MainBundle/Resources/views/Profile/show_content.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Profile/show_content.html.twig
@@ -7,5 +7,7 @@
 
     <p>Prenom: {{ user.Prenom }}</p>
 
-    <p>avatar : <img src="{{ asset(user.path) }}" height="60px" width="60px"/></p>
+    <p>avatar :
+        <img src="{{ asset(user.path) }}" height="60px" width="60px"/>
+    </p>
 </div>
