--- a/web/datatables/css/jquery.dataTables.css
+++ b/web/datatables/css/jquery.dataTables.css
@@ -1,4 +1,4 @@
-.dataTables_wrapper table{
+.dataTables_wrapper table {
 	margin-bottom: 5px !important;
 }
 
@@ -15,11 +15,21 @@ table.dataTable td.dataTables_empty {
 	text-align: center;
 }
 
-table.dataTable tr.odd { background-color: rgba(50, 133, 171, 0.2);}
-table.dataTable tr.even { background-color: white; }
+table.dataTable tr.odd {
+	background-color: rgba(50, 133, 171, 0.2);
+}
 
-table.dataTable tr.odd td.sorting_1 { background-color: rgba(50, 133, 171, 0.2);; }
-table.dataTable tr.even td.sorting_1 { background-color: #EAEBFF; }
+table.dataTable tr.even {
+	background-color: white;
+}
+
+table.dataTable tr.odd td.sorting_1 {
+	background-color: rgba(50, 133, 171, 0.2);;
+}
+
+table.dataTable tr.even td.sorting_1 {
+	background-color: rgba(230, 230, 230, 0.3);
+}
 
 .dataTables_wrapper {
 	position: relative;
@@ -28,13 +38,10 @@ table.dataTable tr.even td.sorting_1 { background-color: #EAEBFF; }
 	margin-bottom: 1em;
 }
 
-.dataTables_length {
-	float: left;
-}
-
 .dataTables_filter {
 	float: right;
 	text-align: right;
+	color: #6d6e70;
 }
 
 .dataTables_info {
@@ -48,140 +55,98 @@ table.dataTable tr.even td.sorting_1 { background-color: #EAEBFF; }
 	display: inline-block;
 }
 
-.footer_datatables{
+.footer_datatables {
 	width: 100%;
 	display: inline-block;
 }
 
-.paginate_disabled_previous,
-.paginate_enabled_previous,
-.paginate_disabled_next,
-.paginate_enabled_next {
-	height: 19px;
-	float: left;
-	cursor: pointer;
-	*cursor: hand;
-	color: #111 !important;
-}
-.paginate_disabled_previous:hover,
-.paginate_enabled_previous:hover,
-.paginate_disabled_next:hover,
-.paginate_enabled_next:hover {
-	text-decoration: none !important;
-}
-.paginate_disabled_previous:active,
-.paginate_enabled_previous:active,
-.paginate_disabled_next:active,
-.paginate_enabled_next:active {
-	outline: none;
-}
-
-.paginate_disabled_previous,
-.paginate_disabled_next {
-	color: #666 !important;
-}
-.paginate_disabled_previous,
-.paginate_enabled_previous {
-	padding-left: 23px;
-}
-.paginate_disabled_next,
-.paginate_enabled_next {
-	padding-right: 23px;
-	margin-left: 10px;
-}
-
-.paginate_enabled_previous { background: url('../images/back_enabled.png') no-repeat top left; }
-.paginate_enabled_previous:hover { background: url('../images/back_enabled_hover.png') no-repeat top left; }
-.paginate_disabled_previous { background: url('../images/back_disabled.png') no-repeat top left; }
-
-.paginate_enabled_next { background: url('../images/forward_enabled.png') no-repeat top right; }
-.paginate_enabled_next:hover { background: url('../images/forward_enabled_hover.png') no-repeat top right; }
-.paginate_disabled_next { background: url('../images/forward_disabled.png') no-repeat top right; }
-
-/* Full number pagination */
 .paging_full_numbers {
-	height: 22px;
-	line-height: 22px;
+	height: 1.5em;
+	line-height: 1.5em;
 }
+
 .paging_full_numbers a:active {
 	outline: none
 }
+
 .paging_full_numbers a:hover {
 	text-decoration: none;
 }
 
 .paging_full_numbers a.paginate_button,
 .paging_full_numbers a.paginate_active {
-	border: 1px solid #aaa;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
+	border: 1px solid #cccccc;
 	padding: 2px 5px;
-	margin: 0 3px;
 	cursor: pointer;
 	*cursor: hand;
-	color: #333 !important;
+	color: #6d6e70 !important;
 }
 
-.paging_full_numbers a.paginate_button {
-	background-color: #ddd;
+.paging_full_numbers .first,
+.paging_full_numbers .previous,
+.paging_full_numbers .next,
+.paging_full_numbers .last {
+	position: relative;
+	display: inline-block;
+	font-family: 'Glyphicons Halflings';
+	-webkit-font-smoothing: antialiased;
+	font-style: normal;
+	font-weight: normal;
+	height: 1.75em;
+	line-height: 1.3em;
+	top: .1em;
+}
+
+.paging_full_numbers .first:before {
+	content: "\e070";
+}
+
+.paging_full_numbers .previous:before {
+	content: "\e069";
+}
+
+.paging_full_numbers .next:before {
+	content: "\e077";
+}
+
+.paging_full_numbers .last:before {
+	content: "\e076";
 }
 
 .paging_full_numbers a.paginate_button:hover {
-	background-color: #ccc;
+	background-color: rgba(230, 230, 230, 0.6);
 	text-decoration: none !important;
 }
 
 .paging_full_numbers a.paginate_active {
-	background-color: #99B3FF;
+	background-color: rgba(50, 133, 171, 0.5);
+	color: white !important;
 }
-
-
-/*
- * Processing indicator
- */
-.dataTables_processing {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	width: 250px;
-	height: 30px;
-	margin-left: -125px;
-	margin-top: -15px;
-	padding: 14px 0 2px 0;
-	border: 1px solid #ddd;
-	text-align: center;
-	color: #999;
-	font-size: 14px;
-	background-color: white;
-}
-
 
 /*
  * Sorting
  */
-.sorting { background: url('../images/sort_both.png') no-repeat center right; }
-.sorting_asc { background: url('../images/sort_asc.png') no-repeat center right; }
-.sorting_desc { background: url('../images/sort_desc.png') no-repeat center right; }
+.sorting {
+	background: url('../images/sort_both.png') no-repeat center right;
+}
 
-.sorting_asc_disabled { background: url('../images/sort_asc_disabled.png') no-repeat center right; }
-.sorting_desc_disabled { background: url('../images/sort_desc_disabled.png') no-repeat center right; }
- 
+.sorting_asc {
+	background: url('../images/sort_asc.png') no-repeat center right;
+}
+
+.sorting_desc {
+	background: url('../images/sort_desc.png') no-repeat center right;
+}
+
+.sorting_asc_disabled {
+	background: url('../images/sort_asc_disabled.png') no-repeat center right;
+}
+
+.sorting_desc_disabled {
+	background: url('../images/sort_desc_disabled.png') no-repeat center right;
+}
+
 table.dataTable thead th:active,
 table.dataTable thead td:active {
 	outline: none;
 }
-
-
-/*
- * Scrolling
- */
-.dataTables_scroll {
-	clear: both;
-}
-
-.dataTables_scrollBody {
-	*margin-top: -1px;
-	-webkit-overflow-scrolling: touch;
-}
-
