--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -9,18 +9,8 @@
                     <input type="hidden" value="{{ classeur.id }}" name="id"/>
                     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                    <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-                                </div>
-                                <div class="modal-body">
-                                    ...
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Save changes</button>
-                                </div>
+                            <div id='modalcontent' class="modal-content">
+
                             </div><!-- /.modal-content -->
                         </div><!-- /.modal-dialog -->
                     </div><!-- /.modal -->
@@ -106,10 +96,24 @@
                 $('#documentcontent').load(Routing.generate('edit_document_for_classeur', {id: {{ classeur.id }}}));
                 $('#signform').submit(function(e){
 
+                    $.ajax('{{ path('signform', {'id':classeur.id}) }}',
+                            {
+                                method: 'GET',
+                                success: function (html) {
 
-                    $('#myModal').modal({
-                        backdrop: 'static'
-                    });
+                                    $('#modalcontent').html(html);
+
+
+                                    $('#myModal').modal({
+                                        backdrop: 'static'
+                                    });
+
+                                }
+
+                            }
+                    );
+
+
                     e.preventDefault();
                     e.stopImmediatePropagation();
                     return false;
@@ -122,4 +126,9 @@
 
         </script>
     </div>
+{% endblock %}
+
+{% block losjavascriptos %}
+    <script type="text/javascript" src="http://www.java.com/js/deployJava.js">
+    </script>
 {% endblock %}
