--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -5,7 +5,7 @@
         {% if classeur.isValidable(app.user.id) %}
             {% if classeur.isSignable(app.user.id) %}
                 <form class="form_action" id="signform">
-                    <button type="submit" class="btn btn-valider">Valider et Signer</button>
+                    <button type="submit" class="btn btn-success">Valider et Signer</button>
                     <input type="hidden" value="{{ classeur.id }}" name="id"/>
                     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
@@ -17,31 +17,31 @@
                 </form>
             {% else %}
                 <form class="form_action" action="{{ path("classeur_valider") }}" method="post">
-                    <button type="submit" class="btn btn-valider">Valider</button>
+                    <button type="submit" class="btn btn-success">Valider</button>
                     <input type="hidden" value="{{ classeur.id }}" name="id"/>
                 </form>
             {% endif %}
 
             <form class="form_action" action="{{ path("classeur_refuser") }}" method="post">
-                <button type="submit" class="btn btn-refuser">Refuser</button>
+                <button type="submit" class="btn btn-danger">Refuser</button>
                 <input type="hidden" value="{{ classeur.id }}" name="id"/>
             </form>
         {% endif %}
 
         {% if retractable %}
             <form class="form_action" action="{{ path("classeur_retracter") }}" method="post">
-                <button type="submit" class="btn btn-retracter">Se r&eacute;tracter</button>
+                <button type="submit" class="btn btn-warning">Se r&eacute;tracter</button>
                 <input type="hidden" value="{{ classeur.id }}" name="id"/>
             </form>
         {% endif %}
 
         {% if classeur.isModifiable(app.user.id) %}
-            <button id="btn_modifier" type="button" class="btn btn-modifier">Modifier</button>
+            <button id="btn_modifier" type="button" class="btn btn-info">Modifier</button>
         {% endif %}
 
         {% if classeur.isSupprimable(app.user.id) %}
-            <form class="form_action" action="{{ path("classeur_supprimer") }}" method="post">
-                <button type="submit" class="btn btn-supprimer">Supprimer</button>
+            <form class="form_action pull-right" action="{{ path("classeur_supprimer") }}" method="post">
+                <button type="submit" class="btn btn-danger">Supprimer</button>
                 <input type="hidden" value="{{ classeur.id }}" name="id"/>
             </form>
         {% endif %}
